# ai-projects

./: .gitignore  README.md
claude-desktop-app/: README.md  package-lock.json  package.json  settings.example.json  tsconfig.node.json
claude-desktop-app/hooks/: bridge-client.js  notify.js  permissions.js  pre_tool_use.js
claude-desktop-app/scripts/: reinstall.sh
claude-desktop-app/src/main/: bridge.server.test.ts  bridge.test.ts  bridge.ts  index.ts  window.ts
claude-desktop-app/src/preload/: index.d.ts  index.ts
claude-desktop-app/src/renderer/: index.html
claude-desktop-app/src/renderer/src/: App.tsx  config.ts  styles.css  types.ts
claude-desktop-app/src/renderer/src/components/: Character.tsx  SpeechBubble.tsx
codex-desktop-app/: README.md  electron.vite.config.ts  hooks.example.json  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
codex-desktop-app/hooks/: bridge-client.js  notify.js  pre_tool_use.js
codex-desktop-app/scripts/: reinstall.sh
codex-desktop-app/src/main/: bridge.ts  index.ts  window.ts
codex-desktop-app/src/preload/: index.d.ts  index.ts
codex-desktop-app/src/renderer/: index.html
codex-desktop-app/src/renderer/src/: App.tsx  config.ts  styles.css  types.ts
codex-desktop-app/src/renderer/src/components/: Character.tsx  SpeechBubble.tsx
codex-notifier/: codex_emoji_notify.py
session-manager/: Cargo.toml  GUIDE.md  README.md
session-manager/src/: app.rs  codex.rs  fonts.rs  main.rs
vibe-diary/: README.md  app.js  code_review.json  index.html  styles.css
