[package]
name = "codex-session-manager"
version = "0.1.0"
edition = "2021"
description = "Cross-platform desktop viewer for saved Codex sessions"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
